Update recipe controller